--- a/paper/main.tex
+++ b/paper/main.tex
@@ -46,7 +46,7 @@
 \newcommand{\JE}{\texttt{jemalloc}}
 \newcommand{\NA}{\texttt{NUMAlloc}}
 \newcommand{\NM}{\texttt{NUMAlloc}}
-
+\newcommand{\TN}{TcMalloc-NUMA}
 
 \newcommand{\pthread}{\texttt{pthread}}
 \newcommand{\pthreads}{\texttt{pthreads}}
@@ -65,7 +65,7 @@
 
 \begin{document}
 
-\title{NUMAlloc: Adaptive NUMA Memory Allocator}
+\title{NUMAlloc: An Adaptive NUMA Memory Allocator}
 \author{Anonymous}
 
 \input{abstract}
